[package]
name = "nyash_client"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "nyash-client"
path = "src/client.rs"

[dependencies]
flate2 = "1.1.9"
ocl = { version = "0.19" }
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "macros", "signal"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
ocl-include = "0.6"
flate2 = "1.1.9"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"
rustflags = ["-L", "/usr/x86_64-w64-mingw32/lib"]


